add/updated Tests
added testclasses for the new Java-files and updated the controller and some other tests because of the file changes