@@ -1,7 +1,6 @@
 package at.technikum.springrestbackend.service;
 
-import at.technikum.springrestbackend.dto.UserRequestDto;
-import at.technikum.springrestbackend.dto.UserUpdateRequestDto;
+import at.technikum.springrestbackend.dto.*;
 import at.technikum.springrestbackend.entity.Role;
 import at.technikum.springrestbackend.entity.Status;
 import at.technikum.springrestbackend.entity.User;
@@ -9,23 +8,20 @@ import at.technikum.springrestbackend.exception.EmailAlreadyExistsException;
 import at.technikum.springrestbackend.exception.UserNotFoundException;
 import at.technikum.springrestbackend.exception.UsernameAlreadyExistsException;
 import at.technikum.springrestbackend.repository.UserRepository;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.MockitoAnnotations;
 import org.springframework.security.crypto.password.PasswordEncoder;
 
-import java.util.List;
-import java.util.Optional;
-import java.util.UUID;
+import java.util.*;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
-@ExtendWith(MockitoExtension.class)
 class UserServiceTest {
+
+    private UserService userService;
 
     @Mock
     private UserRepository userRepository;
@@ -33,188 +29,230 @@ class UserServiceTest {
     @Mock
     private PasswordEncoder passwordEncoder;
 
-    @InjectMocks
-    private UserService userService;
+    @BeforeEach
+    void setUp() {
+        MockitoAnnotations.openMocks(this);
+        userService = new UserService(userRepository, passwordEncoder);
+    }
 
     @Test
-    void getAllUsers_shouldReturnAllUsers() {
-        User user = new User();
-        user.setId(UUID.randomUUID());
-
+    void getAllUsers_shouldReturnListOfUsers() {
+        User user = User.builder().id(UUID.randomUUID()).username("testuser").build();
         when(userRepository.findAll()).thenReturn(List.of(user));
 
         var result = userService.getAllUsers();
 
-        assertThat(result).hasSize(1);
-        assertThat(result.get(0).getId()).isEqualTo(user.getId());
+        assertEquals(1, result.size());
+        assertEquals("testuser", result.getFirst().getUsername());
     }
 
     @Test
-    void getUser_shouldReturnUser() {
-        UUID id = UUID.randomUUID();
-        User user = new User();
-        user.setId(id);
+    void getAllUsers_emptyList_shouldReturnEmptyList() {
+        when(userRepository.findAll()).thenReturn(Collections.emptyList());
+        var result = userService.getAllUsers();
+        assertTrue(result.isEmpty());
+    }
 
-        when(userRepository.findById(id))
-                .thenReturn(Optional.of(user));
+    @Test
+    void getUser_existingUser_shouldReturnUser() {
+        UUID id = UUID.randomUUID();
+        User user = User.builder().id(id).username("testuser").build();
+        when(userRepository.findById(id)).thenReturn(Optional.of(user));
 
         var result = userService.getUser(id);
 
-        assertThat(result.getId()).isEqualTo(id);
+        assertEquals("testuser", result.getUsername());
+        assertEquals(id, result.getId());
     }
 
     @Test
-    void getUser_shouldThrowException_whenNotFound() {
+    void getUser_nonExistingUser_shouldThrowException() {
         UUID id = UUID.randomUUID();
-
-        when(userRepository.findById(id))
-                .thenReturn(Optional.empty());
-
-        assertThatThrownBy(() -> userService.getUser(id))
-                .isInstanceOf(UserNotFoundException.class);
+        when(userRepository.findById(id)).thenReturn(Optional.empty());
+        assertThrows(UserNotFoundException.class, () -> userService.getUser(id));
     }
 
     @Test
-    void createUser_shouldCreateUserSuccessfully() {
+    void createUser_uniqueEmailAndUsername_shouldReturnUser() {
         UserRequestDto dto = new UserRequestDto();
-        dto.setUsername("user1");
-        dto.setEmail("test@test.com");
-        dto.setPassword("secret");
+        dto.setEmail("test@example.com");
+        dto.setUsername("testuser");
+        dto.setPassword("password");
 
-        when(userRepository.findByEmail(dto.getEmail()))
-                .thenReturn(Optional.empty());
-        when(userRepository.findByUsername(dto.getUsername()))
-                .thenReturn(Optional.empty());
-        when(passwordEncoder.encode("secret"))
-                .thenReturn("encoded");
-        when(userRepository.save(any(User.class)))
-                .thenAnswer(inv -> inv.getArgument(0));
+        when(userRepository.findByEmail(dto.getEmail())).thenReturn(Optional.empty());
+        when(userRepository.findByUsername(dto.getUsername())).thenReturn(Optional.empty());
+        when(passwordEncoder.encode(dto.getPassword())).thenReturn("encodedPassword");
+
+        User savedUser = User.builder()
+                .id(UUID.randomUUID())
+                .email(dto.getEmail())
+                .username(dto.getUsername())
+                .password("encodedPassword")
+                .role(Role.USER)
+                .status(Status.ACTIVE)
+                .build();
+        when(userRepository.save(any(User.class))).thenReturn(savedUser);
 
         var result = userService.createUser(dto);
 
-        assertThat(result.getUsername()).isEqualTo("user1");
-        verify(userRepository).save(any(User.class));
+        assertEquals("testuser", result.getUsername());
+        assertEquals("test@example.com", result.getEmail());
     }
 
     @Test
-    void createUser_shouldThrowException_whenEmailExists() {
+    void createUser_existingEmail_shouldThrowException() {
         UserRequestDto dto = new UserRequestDto();
-        dto.setEmail("test@test.com");
+        dto.setEmail("exists@example.com");
+        dto.setUsername("testuser");
 
         when(userRepository.findByEmail(dto.getEmail()))
                 .thenReturn(Optional.of(new User()));
 
-        assertThatThrownBy(() -> userService.createUser(dto))
-                .isInstanceOf(EmailAlreadyExistsException.class);
+        assertThrows(EmailAlreadyExistsException.class, () -> userService.createUser(dto));
     }
 
     @Test
-    void createUser_shouldThrowException_whenUsernameExists() {
+    void createUser_existingUsername_shouldThrowException() {
         UserRequestDto dto = new UserRequestDto();
-        dto.setEmail("test@test.com");
-        dto.setUsername("user1");
+        dto.setEmail("test@example.com");
+        dto.setUsername("exists");
 
-        when(userRepository.findByEmail(dto.getEmail()))
-                .thenReturn(Optional.empty());
+        when(userRepository.findByEmail(dto.getEmail())).thenReturn(Optional.empty());
         when(userRepository.findByUsername(dto.getUsername()))
                 .thenReturn(Optional.of(new User()));
 
-        assertThatThrownBy(() -> userService.createUser(dto))
-                .isInstanceOf(UsernameAlreadyExistsException.class);
+        assertThrows(UsernameAlreadyExistsException.class, () -> userService.createUser(dto));
     }
 
     @Test
-    void updateUser_shouldUpdateUser_withoutPasswordChange() {
+    void updateUser_existingUser_withPassword_shouldUpdate() {
         UUID id = UUID.randomUUID();
-        User existing = new User();
-        existing.setId(id);
-
         UserUpdateRequestDto dto = new UserUpdateRequestDto();
-        dto.setFirstName("Max");
+        dto.setFirstName("NewFirst");
+        dto.setPassword("newPass");
 
-        when(userRepository.findById(id))
-                .thenReturn(Optional.of(existing));
-        when(userRepository.save(existing))
-                .thenReturn(existing);
+        User existing = User.builder().id(id).password("oldPass").build();
+        when(userRepository.findById(id)).thenReturn(Optional.of(existing));
+        when(passwordEncoder.encode("newPass")).thenReturn("encodedNewPass");
+        when(userRepository.save(any(User.class))).thenAnswer(invocation -> invocation.getArgument(0));
 
         var result = userService.updateUser(id, dto);
 
-        assertThat(result.getId()).isEqualTo(id);
-        verify(passwordEncoder, never()).encode(any());
+        assertEquals("NewFirst", result.getFirstName());
+        assertEquals("encodedNewPass", existing.getPassword());
     }
 
     @Test
-    void updateUser_shouldUpdateUser_withPasswordChange() {
+    void updateUser_existingUser_withoutPassword_shouldUpdateOtherFields() {
         UUID id = UUID.randomUUID();
-        User existing = new User();
-        existing.setId(id);
-
         UserUpdateRequestDto dto = new UserUpdateRequestDto();
-        dto.setPassword("newpass");
+        dto.setFirstName("NoPass");
 
-        when(userRepository.findById(id))
-                .thenReturn(Optional.of(existing));
-        when(passwordEncoder.encode("newpass"))
-                .thenReturn("encoded");
-        when(userRepository.save(existing))
-                .thenReturn(existing);
+        User existing = User.builder().id(id).password("oldPass").build();
+        when(userRepository.findById(id)).thenReturn(Optional.of(existing));
+        when(userRepository.save(any(User.class))).thenAnswer(invocation -> invocation.getArgument(0));
 
-        userService.updateUser(id, dto);
+        var result = userService.updateUser(id, dto);
 
-        verify(passwordEncoder).encode("newpass");
+        assertEquals("NoPass", result.getFirstName());
+        assertEquals("oldPass", existing.getPassword()); // password unchanged
     }
 
     @Test
-    void updateUser_shouldThrowException_whenNotFound() {
+    void updateAdminUser_existingUser_withPassword_shouldUpdateAllFields() {
         UUID id = UUID.randomUUID();
+        UserAdminUpdateRequestDto dto = new UserAdminUpdateRequestDto();
+        dto.setUsername("adminuser");
+        dto.setEmail("admin@example.com");
+        dto.setRole(Role.ADMIN);
+        dto.setStatus(Status.ACTIVE);
+        dto.setPassword("newAdminPass");
 
-        when(userRepository.findById(id))
-                .thenReturn(Optional.empty());
+        User existing = User.builder().id(id).password("oldPass").build();
+        when(userRepository.findById(id)).thenReturn(Optional.of(existing));
+        when(passwordEncoder.encode("newAdminPass")).thenReturn("encodedNewAdmin");
+        when(userRepository.save(any(User.class))).thenAnswer(invocation -> invocation.getArgument(0));
 
-        assertThatThrownBy(() -> userService.updateUser(id, new UserUpdateRequestDto()))
-                .isInstanceOf(UserNotFoundException.class);
+        var result = userService.updateAdminUser(id, dto);
+
+        assertEquals("adminuser", result.getUsername());
+        assertEquals(Role.ADMIN, result.getRole());
+        assertEquals("encodedNewAdmin", existing.getPassword());
     }
 
     @Test
-    void deleteUser_shouldDeleteUser() {
+    void updateAdminUser_existingUser_withoutPassword_shouldUpdateOtherFields() {
         UUID id = UUID.randomUUID();
+        UserAdminUpdateRequestDto dto = new UserAdminUpdateRequestDto();
+        dto.setUsername("adminuserNoPass");
+        dto.setEmail("admin@example.com");
+        dto.setRole(Role.USER);
+        dto.setStatus(Status.ACTIVE);
+        dto.setPassword(null); // branch: password null
 
-        when(userRepository.existsById(id))
-                .thenReturn(true);
+        User existing = User.builder().id(id).password("oldPass").build();
+        when(userRepository.findById(id)).thenReturn(Optional.of(existing));
+        when(userRepository.save(any(User.class))).thenAnswer(invocation -> invocation.getArgument(0));
 
-        userService.deleteUser(id);
+        var result = userService.updateAdminUser(id, dto);
 
+        assertEquals("adminuserNoPass", result.getUsername());
+        assertEquals("oldPass", existing.getPassword());
+    }
+
+    @Test
+    void deleteUser_existingUser_shouldCallDelete() {
+        UUID id = UUID.randomUUID();
+        when(userRepository.existsById(id)).thenReturn(true);
+
+        assertDoesNotThrow(() -> userService.deleteUser(id));
         verify(userRepository).deleteById(id);
     }
 
     @Test
-    void deleteUser_shouldThrowException_whenNotFound() {
+    void deleteUser_nonExistingUser_shouldThrowException() {
         UUID id = UUID.randomUUID();
-
-        when(userRepository.existsById(id))
-                .thenReturn(false);
-
-        assertThatThrownBy(() -> userService.deleteUser(id))
-                .isInstanceOf(UserNotFoundException.class);
+        when(userRepository.existsById(id)).thenReturn(false);
+        assertThrows(UserNotFoundException.class, () -> userService.deleteUser(id));
     }
 
     @Test
-    void findByUsernameOptional_shouldReturnUser() {
-        when(userRepository.findByUsername("test"))
-                .thenReturn(Optional.of(new User()));
+    void changePassword_correctCurrentPassword_shouldUpdate() {
+        UUID id = UUID.randomUUID();
+        User user = User.builder().id(id).password("encodedOld").build();
+        when(userRepository.findById(id)).thenReturn(Optional.of(user));
+        when(passwordEncoder.matches("oldPass", "encodedOld")).thenReturn(true);
+        when(passwordEncoder.encode("newPass")).thenReturn("encodedNew");
 
+        userService.changePassword(id, "oldPass", "newPass");
+
+        assertEquals("encodedNew", user.getPassword());
+        verify(userRepository).save(user);
+    }
+
+    @Test
+    void changePassword_wrongCurrentPassword_shouldThrowException() {
+        UUID id = UUID.randomUUID();
+        User user = User.builder().id(id).password("encodedOld").build();
+        when(userRepository.findById(id)).thenReturn(Optional.of(user));
+        when(passwordEncoder.matches("wrong", "encodedOld")).thenReturn(false);
+
+        assertThrows(IllegalArgumentException.class, () -> userService.changePassword(id, "wrong", "newPass"));
+    }
+
+    @Test
+    void findByUsernameOptional_shouldReturnUserOptional() {
+        User user = User.builder().username("test").build();
+        when(userRepository.findByUsername("test")).thenReturn(Optional.of(user));
         var result = userService.findByUsernameOptional("test");
-
-        assertThat(result).isPresent();
+        assertTrue(result.isPresent());
     }
 
     @Test
-    void findByEmailOptional_shouldReturnUser() {
-        when(userRepository.findByEmail("test@test.com"))
-                .thenReturn(Optional.of(new User()));
-
-        var result = userService.findByEmailOptional("test@test.com");
-
-        assertThat(result).isPresent();
+    void findByEmailOptional_shouldReturnUserOptional() {
+        User user = User.builder().email("test@example.com").build();
+        when(userRepository.findByEmail("test@example.com")).thenReturn(Optional.of(user));
+        var result = userService.findByEmailOptional("test@example.com");
+        assertTrue(result.isPresent());
     }
 }
